@@ -4,7 +4,7 @@ use warnings;
 use File::Object;
 use MARC::File::XML (BinaryEncoding => 'utf8', RecordFormat => 'MARC21');
 use MARC::Validator::Plugin::Field008;
-use Test::More 'tests' => 12;
+use Test::More 'tests' => 13;
 use Test::NoWarnings;
 
 # Data dir.
@@ -135,6 +135,24 @@ is_deeply(
 			'params' => {
 				'String' => 'x1753',
 			},
+		}],
+	},
+	'Get struct - checks (leader has bad length number - >x1753<).',
+);
+
+# Test.
+$obj = MARC::Validator::Plugin::Field008->new(
+	'error_id_def' => '015a',
+);
+$obj->init;
+$marc_record = MARC::File::XML->in($data_dir->file('fake3-missing_field_008.xml')->s)->next;
+$obj->process($marc_record);
+$ret = $obj->struct;
+is_deeply(
+	$ret->{'checks'}->{'not_valid'},
+	{
+		'fake3' => [{
+			'error' => "Field 008 is not present.",
 		}],
 	},
 	'Get struct - checks (leader has bad length number - >x1753<).',
